3-tier-application/frontend/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-frontend
  namespace: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-frontend
  template:
    metadata:
      labels:
        app: python-frontend
    spec:
      containers:
      - name: python
        image: iammaheshn/python-frontend:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: python-svc
  namespace: frontend
spec:
  type: NodePort
  selector:
    app: python-frontend
  ports:
  - port: 5000
    nodePort: 30001
