3-tier-application/frontend/front-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: ingress.kubernetes
      http:
        paths:
        - path: /front
          pathType: Prefix
          backend:
            service:
              name: python-svc
              port:
                number: 5000
